[package]
name = "sutara-protocol"
version = "0.1.0"
description = "Sutara decentralized prediction market protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sutara_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
solana-program = "1.18.12"

[dev-dependencies]
